--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 alembic==1.0.11
 amqp==2.5.2
-audioread==2.1.8
+# audioread==2.1.8
 autopep8==1.4.4
 Babel==2.7.0
 bcrypt==3.1.7
 billiard==3.6.2.0
 blinker==1.4
-cffi==1.12.3
+cffi==1.16.0
 Click==7.0
 colour==0.1.5
 cycler==0.10.0
@@ -29,16 +29,14 @@ infinity==1.4
 intervals==0.8.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
-joblib==0.14.1
 kiwisolver==1.1.0
 kombu==4.6.7
-librosa==0.7.2
-llvmlite==0.31.0
+librosa==0.10.1
+llvmlite==0.41.0
 Mako==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.5.0
-numba==0.47.0
-numpy==1.17.4
+numba==0.58.1
 passlib==1.7.1
 psycopg2==2.8.3
 pycodestyle==2.5.0
@@ -50,10 +48,9 @@ python-dotenv==0.10.3
 python-editor==1.0.4
 pytz==2019.2
 resampy==0.2.2
-scikit-learn==0.22.1
+scikit-learn==1.3.2
 scipy==1.7.2
 six==1.12.0
-SoundFile==0.10.3.post1
 speaklater==1.3
 SQLAlchemy==1.3.6
 SQLAlchemy-Utils==0.35.0
